adding and deleting teams and players

--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -3,15 +3,15 @@
     <div class="col-8 offset-2">
       <div class="card mt-4">
         <div class="card-body">
-          <h5 class="card-title">Example</h5>
+          <h5 class="card-title">Team</h5>
           <p>
-            <strong>ID</strong>: {{example.id}}</p>
+            <strong>Team ID</strong>: {{example.id}}</p>
           <p>
           <p>
-            <strong>Text</strong>: {{example.text}}</p>
+            <strong>Team Text</strong>: {{example.text}}</p>
           <p>
-            <strong>Description:</strong> {{example.description}}</p>
-            <a href="/">← Back To Home</a>
+            <strong>Team Description:</strong> {{example.description}}</p>
+            <a href="/teamManager">← Back To TeamManager</a>
         </div>
       </div>
     </div>
