--- a/views/teamManager.handlebars
+++ b/views/teamManager.handlebars
@@ -6,20 +6,16 @@
         <h2>This is our Team Manager Page!</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Team Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
-          </div>
-          <div class="form-group">
-            <label for="example-description">Team Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+            <label for="team-name">Team Name</label>
+            <input type="text" id="team-name" class="form-control" aria-describedby="team-name" placeholder="Enter Team Name">
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
         <h3>Teams:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
+        <ul id="team-list" class="list-group">
+          {{#each teams}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+            <a href="api/teams/{{this.id}}">{{this.text}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
@@ -30,4 +26,4 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/teamManager.js"></script>
