--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -3,23 +3,23 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our Team Manager Page!</h2>
+        <h2>This is our Game Manager Page!</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
-            <label for="example-text">Team Text</label>
-            <input type="text" id="example-text" class="form-control" aria-describedby="example-text" placeholder="Enter Example Text">
+            <label for="game-text">Game Text</label>
+            <input type="text" id="game-text" class="form-control" aria-describedby="game-text" placeholder="Enter Game Text">
           </div>
           <div class="form-group">
-            <label for="example-description">Team Description</label>
-            <textarea class="form-control" id="example-description" aria-describedby="example-description" placeholder="Enter Example Description"></textarea>
+            <label for="game-description">Game Description</label>
+            <textarea class="form-control" id="game-description" aria-describedby="game-description" placeholder="Enter Game Description"></textarea>
           </div>
           <button id="submit" class="btn btn-primary float-right">Submit</button>
         </form>
-        <h3>Teams:</h3>
-        <ul id="example-list" class="list-group">
-          {{#each examples}}
+        <h3>Games:</h3>
+        <ul id="game-list" class="list-group">
+          {{#each games}}
           <li data-id="{{this.id}}" class="list-group-item">
-            <a href="example/{{this.id}}">{{this.text}}</a>
+            <a href="game/{{this.id}}">{{this.text}}</a>
             <button class="btn btn-danger float-right delete">ｘ</button>
           </li>
           {{/each}}
@@ -30,4 +30,4 @@
 </div>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<script src="/js/gameManager.js"></script>
