--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -12,7 +12,7 @@
           
           <div class="form-group">
             <label for="category">Select Team:</label>
-            <select class="custom-select" id="team">
+            <select class="custom-select" id="homeTeam">
             </select>
           </div>
 
