--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -5,10 +5,6 @@
         <h1>{{msg}}</h1>
         <h2>This is our Game Manager Page!</h2>
         <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="game-name">Game Name</label>
-            <input type="text" id="game-name" class="form-control" aria-describedby="game-name" placeholder="Enter Game Name">
-          </div>
 
           <div class="form-group">
             <label for="category">Select Home Team:</label>
@@ -17,9 +13,17 @@
           </div>
 
           <div class="form-group">
-            <label for="category">Select Visiting Team:</label>
-            <select class="custom-select" id="visitingTeam">
+            <label for="category">Select Visitor Team:</label>
+            <select class="custom-select" id="visitorTeam">
             </select>
+          </div>
+          <div class="form-group">
+            <label for="category">Select Game Date:</label>
+            <input type="date" id="gameDay">
+          </div>
+          <div class="form-group">
+            <label for="category">Select Game Time:</label>
+            <input type="time" id="gameTime">
           </div>
 
           <button id="submit" class="btn btn-primary float-right">Submit</button>
