added link from game picker to scorekeeper app and added simple countdown timer with start and stop

--- a/views/gamePicker.handlebars
+++ b/views/gamePicker.handlebars
@@ -11,7 +11,9 @@
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="api/games/{{this.id}}">{{this.text}}</a>
             <!-- changed delete class to gamePick class -->
-            <button class="btn btn-danger float-right gamePick">y</button>
+            <!--     <button class="btn btn-danger float-right gamePick">y</button>
+            <p> Hello world!!</p>
+            <a class="btn btn-primary float-right" href="../public/scorekeeper.html">this one</a> -->
           </li>
           {{/each}}
         </ul>
