--- a/views/landing.html
+++ b/views/landing.html
@@ -138,32 +138,32 @@
                 <h1 class="text-center" style="padding-left:25px">Scorekeepers</h1>
             </div>
             <div class="row" style="padding-top:40px;">
-                <button type="button" id="score-btn" class="btn btn-default button" data-toggle="modal" data-target="#exampleModal">Scores</button>
+                <a href="/gameselect"> <button type="button" id="score-btn" class="btn btn-default button">Scores
+                    </button></a>
                 <button type="button" id="manage-btn" class="btn btn-default button">Manage</button>
             </div>
         </div>
 
         <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        <!-- <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
             aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Select Game</h5>
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        ...
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">View</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
 
         <footer class="page-footer footer">
@@ -176,12 +176,7 @@
 
     </div>
     <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function (e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
+    <!-- <script type="text/javascript" src="/js/scoreboard.js"></script> -->
 </body>
 
 </html>
