--- a/views/landing.html
+++ b/views/landing.html
@@ -124,7 +124,7 @@
                             <a class="nav-link" href="score.html">Scores</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="manageGame.handlebars">Manage</a>
+                            <a class="nav-link" href="../public/index.html">Manage</a>
                         </li>
                     </ul>
                     <!-- Links -->
@@ -140,30 +140,10 @@
             <div class="row" style="padding-top:40px;">
                 <a href="/gameselect"> <button type="button" id="score-btn" class="btn btn-default button">Scores
                     </button></a>
-                <button type="button" id="manage-btn" class="btn btn-default button">Manage</button>
+                <a href="/index"><button type="button" id="manage-btn" class="btn btn-default button">Manage</button></a>
             </div>
         </div>
 
-        <!-- Modal -->
-        <!-- <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div> -->
 
 
         <footer class="page-footer footer">
