--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -1,3 +1,23 @@
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="/teamManager">Team Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="/playerManager">Player Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/gameManager">Game Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gamePicker">Game Picker</a>
+      </li>
+
+    </ul>
+  </div>
+</div>
+
 <div id="home">
   <div class="container">
     <div class="row">
