--- a/views/playerManager.handlebars
+++ b/views/playerManager.handlebars
@@ -1,3 +1,22 @@
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link " href="/teamManager">Team Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/playerManager">Player Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gameManager">Game Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gamePicker">Game Picker</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div id="home">
   <div class="container">
     <div class="row">
@@ -7,15 +26,18 @@
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="player-firstName">Player First Name</label>
-            <textarea class="form-control" id="player-firstName" aria-describedby="player-firstName" placeholder="Enter Player First Name"></textarea>
+            <textarea class="form-control" id="player-firstName" aria-describedby="player-firstName"
+              placeholder="Enter Player First Name"></textarea>
           </div>
           <div class="form-group">
             <label for="player-lastName">Player Last Name</label>
-            <textarea class="form-control" id="player-lastName" aria-describedby="player-lastName" placeholder="Enter Player Last Name"></textarea>
+            <textarea class="form-control" id="player-lastName" aria-describedby="player-lastName"
+              placeholder="Enter Player Last Name"></textarea>
           </div>
           <div class="form-group">
             <label for="player-jerseyNumber">Player Jersey Number</label>
-            <textarea class="form-control" id="player-jerseyNumber" aria-describedby="player-jerseyNumber" placeholder="Enter Player Jersey Number"></textarea>
+            <textarea class="form-control" id="player-jerseyNumber" aria-describedby="player-jerseyNumber"
+              placeholder="Enter Player Jersey Number"></textarea>
           </div>
 
           <div class="form-group">
