--- a/views/gamePicker.handlebars
+++ b/views/gamePicker.handlebars
@@ -1,8 +1,27 @@
+<div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link " href="/teamManager">Team Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/playerManager">Player Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/gameManager">Game Manager</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" href="/gamePicker">Game Picker</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div id="home">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
+        {{!-- <h1>{{msg}}</h1> --}}
         <h2>This is our Game Picker Page!</h2>
 
         <h3>Games:</h3>
