home button added

--- a/views/teamManager.handlebars
+++ b/views/teamManager.handlebars
@@ -1,19 +1,23 @@
 <div class="card text-center">
-  <div class="card-header">
-    <ul class="nav nav-tabs card-header-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="/teamManager">Team Manager</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/playerManager">Player Manager</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gameManager">Game Manager</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/gamePicker">Game Picker</a>
-      </li>
-    </ul>
+  <div class="card-header row">
+    <div class="col-8" style="margin:0;padding:0">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="/teamManager">Team Manager</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/playerManager">Player Manager</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gameManager">Game Manager</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/gamePicker">Game Picker</a>
+        </li>
+      </ul>
+    </div>
+    <div class="offset-1 col-2"><a href="/"> <button type="button" class="btn btn-dark">HOME</button></a>
+    </div>
   </div>
 </div>
 
