--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -31,7 +31,7 @@
 
           <div class="form-group">
             <label for="category">Select Home Team:</label>
-            <select class="custom-select" id="homeTeam">
+            <select class="form-control" id="homeTeam" placeholder="Home Team">
             </select>
           </div>
 
