--- a/views/teamManager.handlebars
+++ b/views/teamManager.handlebars
@@ -1,6 +1,6 @@
 <div class="card text-center">
   <div class="card-header row">
-    <div class="col-8" style="margin:0;padding:0">
+    <div class="col-8">
       <ul class="nav nav-tabs card-header-tabs">
         <li class="nav-item">
           <a class="nav-link active" href="/teamManager">Team Manager</a>
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div id="home">
+<div id="home" style="margin: 15px">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
