--- a/views/playerManager.handlebars
+++ b/views/playerManager.handlebars
@@ -21,7 +21,7 @@
   </div>
 </div>
 
-<div id="home">
+<div id="home" style="margin:15px">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
