--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -6,7 +6,7 @@ body {
 
 .bg {
     /* The image used */
-    background-image: url("../public/images/ice-hockey.jpg");
+    background-image: url("/public/images/ice-hockey.jpg");
     height: 100%;
     /* Center and scale the image nicely */
     background-position: center;
@@ -20,7 +20,7 @@ body {
     margin: 5px 10px;
     position: relative;
     /* padding: 20px; */
-    width: 150px;
+    width: 200px;
     height: 50px;
     text-align: center;
     -webkit-transition-duration: 0.4s;
@@ -38,13 +38,13 @@ body {
     position: absolute;
     padding-top: 300%;
     padding-left: 350%;
-    margin-left: -20px !important;
+    margin-left: -20px;
     margin-top: -120%;
     opacity: 0;
     transition: all 0.8s
 }
 
-.button:active:after {
+.funkyButton:active:after {
     padding: 0;
     margin: 0;
     opacity: 1;
@@ -148,4 +148,9 @@ body {
     border: 1px solid rgb(50, 72, 94);
     background-color: rgba(152, 202, 252, 0.5);
     /* background-opacity: 0.0; */
+}
+
+/* view scoresplace */
+.scores-appear-here {
+    background-color: rgba(0, 0, 0, 0.2)
 }
