--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
+  {{!-- validation scripts --}}
+  <script src="js/jquery.validate.min">
+  </script>
 
   <!-- Web-Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Acme|PT+Sans+Caption" rel="stylesheet">
