--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -66,8 +66,8 @@ body {
     color: rgb(4, 66, 117);
     text-shadow: rgb(27, 6, 65) 0 0 10px;
     font-family: 'Diplomata', cursive;
-    padding: 3% 1%;
-    margin: 2% 0;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
     border-bottom: 1px solid rgb(0, 95, 238);
 }
 
