--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
+        {{!-- <h1>{{msg}}</h1> --}}
         <h2>This is our Game Manager Page!</h2>
         <form id="manager-form" class="clearfix mb-4" action="POST">
 
