--- a/views/playerManager.handlebars
+++ b/views/playerManager.handlebars
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        <h1>{{msg}}</h1>
+        {{!-- <h1>{{msg}}</h1> --}}
         <h2>This is our Player Manager Page!</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
