--- a/views/gamePicker.handlebars
+++ b/views/gamePicker.handlebars
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-8 offset-2">
         {{!-- <h1>{{msg}}</h1> --}}
-        <h2>This is our Game Picker Page!</h2>
+        <h2>Game Picker Page</h2>
 
         <h3>Games:</h3>
         <ul id="game-list" class="list-group">
