--- a/views/teamManager.handlebars
+++ b/views/teamManager.handlebars
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="col-8 offset-2">
         {{!-- <h1>{{msg}}</h1> --}}
-        <h2>This is our Team Manager Page!</h2>
+        <h2>Team Manager Page</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="team-name">Team Name</label>
