20190213 Add back overwritten code from game select and completed other issues

--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -11,7 +11,7 @@
             <strong>Team Text</strong>: {{example.text}}</p>
           <p>
             <strong>Team Description:</strong> {{example.description}}</p>
-            <a href="/teamManager">← Back To TeamManager</a>
+            <a href="/teamManager">← Back To Manage Teams</a>
         </div>
       </div>
     </div>
