--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -3,16 +3,16 @@
     <div class="col-8">
       <ul class="nav nav-tabs card-header-tabs">
         <li class="nav-item">
-          <a class="nav-link" href="/teamManager">Team Manager</a>
+          <a class="nav-link" href="/teamManager">Manage Teams</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/playerManager">Player Manager</a>
+          <a class="nav-link " href="/playerManager">Manage Players</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/gameManager">Game Manager</a>
+          <a class="nav-link active" href="/gameManager">Manage Games</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gamePicker">Game Picker</a>
+          <a class="nav-link" href="/gamePicker">Select Game</a>
         </li>
       </ul>
     </div>
@@ -21,12 +21,12 @@
   </div>
 </div>
 
-<div id="home">
+<div id="home" style="margin:15px">
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        {{!-- <h1>{{msg}}</h1> --}}
-        <h2>Game Manager Page</h2>
+
+        <h2>Manage Games Page</h2>
         <form id="manager-form" class="clearfix mb-4" action="POST">
 
           <div class="form-group">
