--- a/views/inGameManager.handlebars
+++ b/views/inGameManager.handlebars
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
-        <h2>This is our In Game Manager Page!</h2>
+        <h2>This is our In Manage Games Page!</h2>
         
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
