--- a/views/teamManager.handlebars
+++ b/views/teamManager.handlebars
@@ -3,16 +3,16 @@
     <div class="col-8">
       <ul class="nav nav-tabs card-header-tabs">
         <li class="nav-item">
-          <a class="nav-link active" href="/teamManager">Team Manager</a>
+          <a class="nav-link active" href="/teamManager">Manage Teams</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/playerManager">Player Manager</a>
+          <a class="nav-link" href="/playerManager">Manage Players</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gameManager">Game Manager</a>
+          <a class="nav-link" href="/gameManager">Manage Games</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/gamePicker">Game Picker</a>
+          <a class="nav-link" href="/gamePicker">Select Game</a>
         </li>
       </ul>
     </div>
@@ -25,8 +25,8 @@
   <div class="container">
     <div class="row">
       <div class="col-8 offset-2">
-        {{!-- <h1>{{msg}}</h1> --}}
-        <h2>Team Manager Page</h2>
+
+        <h2>Manage Teams Page</h2>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
             <label for="team-name">Team Name</label>
