manage page changes

--- a/views/manageTeams.handlebars
+++ b/views/manageTeams.handlebars
@@ -23,7 +23,7 @@
           {{#each examples}}
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="example/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
+            <button class="btn btn-danger float-right delete"></button>
           </li>
           {{/each}} --}}
         </ul>
