cahnged buttons on manage pages

--- a/views/managePlayers.handlebars
+++ b/views/managePlayers.handlebars
@@ -26,7 +26,7 @@
                             </select>
                         </div>
 
-                        <button id="submit" class="btn btn-primary float-right">Submit</button>
+                        <button id="submit" class="btn funkuButton float-right">Submit</button>
                 </form>
                 </ul>
             </div>
