--- a/views/gameManager.handlebars
+++ b/views/gameManager.handlebars
@@ -49,14 +49,14 @@
             <input type="time" id="gameTime">
           </div>
 
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <button id="submit" class="btn funkyButton float-right" style="width:100px">Submit</button>
         </form>
         <h3>Games:</h3>
         <ul id="game-list" class="list-group">
           {{#each games}}
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="api/games/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
+            <button class="btn float-right delete"><i class="fa fa-trash" aria-hidden="true"></i></button>
           </li>
           {{/each}}
         </ul>
