--- a/views/playerManager.handlebars
+++ b/views/playerManager.handlebars
@@ -50,14 +50,14 @@
             </select>
           </div>
 
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
+          <button id="submit" class="btn funkyButton float-right" style="width:100px">Submit</button>
         </form>
         <h3>Players:</h3>
         <ul id="player-list" class="list-group">
           {{#each players}}
           <li data-id="{{this.id}}" class="list-group-item">
             <a href="player/{{this.id}}">{{this.text}}</a>
-            <button class="btn btn-danger float-right delete">ｘ</button>
+            <button class="btn float-right delete"><i class="fa fa-trash "></i></button>
           </li>
           {{/each}}
         </ul>
